examples/pts/pos/valueTypes.effekt
module examples/pts/pos/valueTypes

val value1: _ = 1

def func1(x: _, y: _): Int = x + y

def func2(): _ = "test"

def main() = {
    func1(1, 2)
}

