examples/pts/neg/functionParameter.effekt
module examples/pts/neg/functionParameter

def func1(x: _) = "test"